syntax = "proto3";

option csharp_namespace = "Messages.GRPC";

package greet;


service Chat {
  rpc JoinUserChat(JoinUserRequest) returns (JoinUserResponse);
  rpc SendMessage (stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
  string userId = 1;
  string roomId = 2;
  string text = 3;
}

message JoinUserRequest{
  string userId = 1;
  string roomId = 2;
  string name = 3;
}

message JoinUserResponse {
  string room_id = 1;
}
